--- a/userProfile.html
+++ b/userProfile.html
@@ -366,7 +366,8 @@
                     </div>
 
                 </div>
-            </div><!-- section -->
+            </div>
+            <!-- section -->
         </div>
 
         <footer class="footer footer-black footer-big" style="margin-top:40px;">
