top nav menu fixed, change pw modal for user and cafe fixed

--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -19,7 +19,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="assets/css/material-kit.css?v=1.2.1" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/css/sneedsCustom.css">
-    <title>Title</title>
+    <title>مدیریت کافه اسنیدز تست</title>
 </head>
 <body>
 <nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
@@ -50,7 +50,7 @@
                 <li class="pull-right"><a href="cafeList.html">کافه ها</a></li>
                 <li class="pull-right"><a href="booklet.html">صفحه تکی جزوه</a></li>
                 <li class="pull-right"><a href="cafe.html">صفحه تکی کافه</a></li>
-                <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
+
                 <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
                     <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
@@ -250,6 +250,16 @@
 
                                             <div class="input-group">
 											    <span class="input-group-addon">
+												    <i class="material-icons">camera_alt</i>
+											    </span>
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control yekanFont" value="آیدی اینستا کافه از سرور...">
+                                                    <span class="material-input"></span>
+                                                </div>
+                                            </div>
+
+                                            <div class="input-group">
+											    <span class="input-group-addon">
 												    <i class="material-icons">assignment</i>
 											    </span>
                                                 <div class="form-group">
@@ -279,8 +289,7 @@
                                         </div>
                                     </form>
                                     <div class="text-left row" style="margin-left:30px;">
-                                        <button class="btn btn-warning yekanFont normalFontSize" data-toggle="modal"
-                                                data-target="#loginModal">
+                                        <button class="btn btn-warning yekanFont normalFontSize" data-toggle="modal" data-target="#loginModal">
                                             <i class="material-icons">lock</i>
                                             تغییر رمز عبور
                                             <div class="ripple-container"></div>
@@ -291,13 +300,11 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <hr>
         </div>
     </div><!-- section -->
-
 </div>
 
 <footer class="footer footer-black footer-big">
@@ -401,8 +408,107 @@
 
     </div>
 </footer>
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-login">
+        <div class="modal-content">
+            <div class="card card-signup card-plain">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i
+                            class="material-icons">clear</i></button>
+
+                    <div class="header header-warning text-center">
+                        <h4 class="card-title yekanFont">تغییر رمز عبور</h4>
+                        <!--<div class="social-line">-->
+                        <!--<a href="#pablo" class="btn btn-just-icon btn-simple">-->
+                        <!--<i class="fa fa-facebook-square"></i>-->
+                        <!--</a>-->
+                        <!--<a href="#pablo" class="btn btn-just-icon btn-simple">-->
+                        <!--<i class="fa fa-twitter"></i>-->
+                        <!--</a>-->
+                        <!--<a href="#pablo" class="btn btn-just-icon btn-simple">-->
+                        <!--<i class="fa fa-google-plus"></i>-->
+                        <!--</a>-->
+                        <!--</div>-->
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <form class="form" method="" action="">
+                        <!--<p class="description text-center">Or Be Classical</p>-->
+                        <div class="card-content">
+
+                            <div class="input-group">
+								<span class="input-group-addon">
+									<i class="material-icons">lock_open</i>
+								</span>
+                                <div class="form-group form-warning">
+                                    <input type="password" class="form-control yekanFont normalFontSize"
+                                           placeholder="رمز عبور فعلی...">
+                                    <span class="material-input"></span>
+                                </div>
+                            </div>
+                            <div class="input-group">
+								<span class="input-group-addon">
+									<i class="material-icons">lock</i>
+								</span>
+                                <div class="form-group form-warning">
+                                    <input type="password" class="form-control yekanFont normalFontSize"
+                                           placeholder="رمز عبور جدید...">
+                                    <span class="material-input"></span>
+                                </div>
+                            </div>
+                            <div class="input-group">
+								<span class="input-group-addon">
+									<i class="material-icons">lock</i>
+									<i class="material-icons">done</i>
+								</span>
+                                <div class="form-group form-warning">
+                                    <input type="password" class="form-control yekanFont normalFontSize"
+                                           placeholder="تکرار رمز عبور جدید...">
+                                    <span class="material-input"></span>
+                                </div>
+                            </div>
+
+                            <!--<div class="input-group">-->
+                            <!--<span class="input-group-addon">-->
+                            <!--<i class="material-icons">email</i>-->
+                            <!--</span>-->
+                            <!--<div class="form-group"><input type="text" class="form-control" placeholder="Email..."><span class="material-input"></span></div>-->
+                            <!--</div>-->
+
+                            <!--<div class="input-group">-->
+                            <!--<span class="input-group-addon">-->
+                            <!--<i class="material-icons">lock_outline</i>-->
+                            <!--</span>-->
+                            <!--<div class="form-group"><input type="password" placeholder="Password..." class="form-control"><span class="material-input"></span></div>-->
+                            <!--</div>-->
+
+                            <!-- If you want to add a checkbox to this form, uncomment this code
+
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="optionsCheckboxes" checked>
+                                    Subscribe to newsletter
+                                </label>
+                            </div> -->
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer text-center">
+                    <a href="#pablo" class="btn btn-simple btn-warning btn-wd yekanFont normalFontSize">
+                        تغییر رمز عبور
+                        <div class="ripple-container"></div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 </body>
+
+
 <!--   Core JS Files   -->
 <script src="assets/js/jquery.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
