logout button added for cafe admin and user's pages

--- a/userProfile.html
+++ b/userProfile.html
@@ -118,13 +118,22 @@
                 <div class="col-md-12 text-center">
                     <div class="profile-tabs">
                         <div class="nav-align-center">
+                            <div class="text-left">
+                                <a href="landing.html" class="btn btn-bg btn-danger yekanFont" >
+                                     خروج
+                                    <i class="material-icons" style="transform: rotate(180deg);">exit_to_app</i>
+                                </a>
+                            </div>
+
                             <ul class="nav nav-pills nav-pills-info nav-pills-icons yekanFont" role="tablist">
+
                                 <li class="">
                                     <a href="#editProfile" role="tab" data-toggle="tab" aria-expanded="false">
                                         <i class="material-icons">edit</i>
                                         ویرایش پروفایل
                                     </a>
                                 </li>
+
                                 <li class="">
                                     <a href="#cafeDiscounts" role="tab" data-toggle="tab" aria-expanded="false">
                                         <i class="material-icons">local_cafe</i>
