--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -117,6 +117,12 @@
                 <div class="col-md-12 text-center">
                     <div class="profile-tabs">
                         <div class="nav-align-center">
+                            <div class="text-left">
+                                <a href="landing.html" class="btn btn-bg btn-danger yekanFont" >
+                                    خروج
+                                    <i class="material-icons" style="transform: rotate(180deg);">exit_to_app</i>
+                                </a>
+                            </div>
                             <ul class="nav nav-pills nav-pills-info nav-pills-icons yekanFont" role="tablist">
                                 <li class="">
                                     <a href="#editCafeProfile" role="tab" data-toggle="tab" aria-expanded="true">
