--- a/userProfile.html
+++ b/userProfile.html
@@ -81,7 +81,7 @@
 </nav>
 
 <div class="page-header header-filter header-small" data-parallax="true"
-     style="background-image: url(assets/img/cafe.jpg); transform: translate3d(0px, 0px, 0px);">
+     style="background-image: url(assets/img/userbg.jpg); transform: translate3d(0px, 0px, 0px);">
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
