bug fixes for login and register pages

--- a/registerAuth.html
+++ b/registerAuth.html
@@ -92,16 +92,16 @@
 <div class="page-header header-filter" style="background-image: url('assets/img/bg3.jpg'); background-size: cover; background-position: top center;">
     <div class="container">
 
-        <div class="row">
-            <div class="col-md-12" style="margin-bottom:30px;">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb yekanFont">
-                        <li class="breadcrumb-item"><a href="#">صفحه اول</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">ورود-ثبت نام</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
+        <!--<div class="row">-->
+            <!--<div class="col-md-12" style="margin-bottom:30px;">-->
+                <!--<nav aria-label="breadcrumb">-->
+                    <!--<ol class="breadcrumb yekanFont">-->
+                        <!--<li class="breadcrumb-item"><a href="#">صفحه اول</a></li>-->
+                        <!--<li class="breadcrumb-item active" aria-current="page">ورود-ثبت نام</li>-->
+                    <!--</ol>-->
+                <!--</nav>-->
+            <!--</div>-->
+        <!--</div>-->
 
         <div class="row">
             <!--<div class="col-md-1"></div>-->
@@ -170,7 +170,7 @@
                 <!--</div>-->
             <!--</div>-->
 
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-6 col-md-offset-3">
             <div class="card card-signup" id="signUpCard">
             <form class="form" method="" action="">
             <div class="header header-info text-center">
@@ -182,9 +182,9 @@
             <!--<a href="" class="btn btn-just-icon btn-simple">-->
             <!--<i class="fa fa-twitter"></i>-->
             <!--</a>-->
-            <a href="" class="btn btn-just-icon btn-simple">
-            <i class="fa fa-google-plus"></i>
-            </a>
+            <!--<a href="" class="btn btn-just-icon btn-simple">-->
+            <!--<i class="fa fa-google-plus"></i>-->
+            <!--</a>-->
             </div>
             </div>
             <!--<p class="description text-center">Or Be Classical</p>-->
