--- a/auth.html
+++ b/auth.html
@@ -92,18 +92,18 @@
 <div class="page-header header-filter" style="background-image: url('assets/img/bg3.jpg'); background-size: cover; background-position: top center;">
     <div class="container">
 
-        <div class="row">
-            <div class="col-md-12" style="margin-bottom:30px;">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb yekanFont">
-                        <li class="breadcrumb-item"><a href="#">صفحه اول</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">ورود-ثبت نام</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
+        <!--<div class="row">-->
+            <!--<div class="col-md-12" style="margin-bottom:30px;">-->
+                <!--<nav aria-label="breadcrumb">-->
+                    <!--<ol class="breadcrumb yekanFont">-->
+                        <!--<li class="breadcrumb-item"><a href="#">صفحه اول</a></li>-->
+                        <!--<li class="breadcrumb-item active" aria-current="page">ورود-ثبت نام</li>-->
+                    <!--</ol>-->
+                <!--</nav>-->
+            <!--</div>-->
+        <!--</div>-->
 
-        <div class="row">
+        <div class="row" style="margin-top:30px;">
             <!--<div class="col-md-1"></div>-->
             <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
                 <div class="card card-signup" style="margin-bottom:0 !important;">
@@ -117,9 +117,9 @@
                                 <!--<a href="" class="btn btn-just-icon btn-simple">-->
                                 <!--<i class="fa fa-twitter"></i>-->
                                 <!--</a>-->
-                                <a href="" class="btn btn-just-icon btn-simple">
-                                    <i class="fa fa-google-plus"></i>
-                                </a>
+                                <!--<a href="" class="btn btn-just-icon btn-simple">-->
+                                    <!--<i class="fa fa-google-plus"></i>-->
+                                <!--</a>-->
                             </div>
                         </div>
                         <!--<p class="description text-center">Or Be Classical</p>-->
