bookelet back icon fixrd

--- a/booklet.html
+++ b/booklet.html
@@ -108,15 +108,19 @@
 <div class="section section-gray" style="z-index:9;">
     <div class="container">
         <div class="main main-raised main-product">
+
+
             <div class="row">
                 <div class="col-md-6">
                     <img src="assets/img/bg3.jpg" alt="booklet image" class="img-responsive" draggable="false">
+                    <div class="row">
+
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <h2 class="title yekanFont text-right rtl">نام جزوه برای دانلود</h2>
                     <h4 class="title yekanFont text-right rtl">موضوع جزوه</h4>
                     <hr>
-
                     <div>
                         <div class="icon icon-primary pull-right" style="margin-left:10px">
                             <i class="material-icons">format_color_text</i>
@@ -150,86 +154,25 @@
                         <!--<i class="material-icons">format_color_text</i>-->
                         <!--نویسنده :-->
                     <!--</span>-->
-
-                    <div id="acordeon">
-
-                        <div class="panel-group" id="accordion">
-
-                            <!--<div class="panel panel-border panel-default">-->
-                            <!--<div class="panel-heading" role="tab" id="headingOne">-->
-                            <!--<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"-->
-                            <!--aria-expanded="false" aria-controls="collapseOne" class="collapsed">-->
-                            <!--<h4 class="panel-title yekanFont rtl text-right">-->
-                            <!--توضیحات درسی-->
-                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
-                            <!--</h4>-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div id="collapseOne" class="panel-collapse collapse" aria-expanded="false"-->
-                            <!--style="height: 0px;">-->
-                            <!--<div class="panel-body">-->
-
-                            <!--<p class="yekanFont text-justfy rtl">نام جزوه: نام کامل جزوه</p>-->
-                            <!--<p class="yekanFont text-justfy rtl">موضوع جزوه: موضوع کامل جزوه</p>-->
-                            <!--<p class="yekanFont text-justfy rtl">استاد جزوه: نام کامل استاد جزوه</p>-->
-                            <!--<p class="yekanFont text-justfy rtl">نویسنده جزوه: نام کامل نویسنده جزوه</p>-->
-
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>-->
-
-                            <div class="panel panel-border panel-default">
-                                <!--<div class="panel-heading" role="tab" id="headingThree">-->
-                                    <!--<a role="button" data-toggle="collapse" data-parent="#accordion"-->
-                                       <!--href="#collapseThree" aria-controls="collapseOne" class="collapsed"-->
-                                       <!--aria-expanded="false">-->
-                                        <!--<h4 class="panel-title text-danger yekanFont rtl">-->
-                                            <!--گزارش خرابی / مشکل در جزوه-->
-                                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
-                                        <!--</h4>-->
-                                    <!--</a>-->
-                                <!--</div>-->
-
-                                <div id="collapseThree" class="panel-collapse collapse" aria-expanded="false" style="height: 0;">
-                                    <div class="panel-body">
-                                        <form class="form" method="" action="">
-                                            <div class="card-content">
-                                                <div class="input-group">
-											<span class="input-group-addon">
-												<i class="material-icons">sync_problem</i>
-											</span>
-                                                    <div class="form-group  form-danger"><textarea
-                                                            class="form-control yekanFont" rows="5"
-                                                            placeholder="مشکل یا ایراد مورد نظر را اینجا توضیح دهید تا پیگیری شود"></textarea><span
-                                                            class="material-input"></span></div>
-                                                </div>
-
-
-                                            </div>
-                                            <div class="footer text-center">
-                                                <input type="submit" class="btn btn-danger yekanFont rtl"
-                                                       value="گزارش خرابی">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="row text-right">
-                        <button class="btn btn-primary yekanFont normalFontSize" rel="tooltip" title
-                                data-original-title="حجم : 24 مگابایت">
-                            &nbsp; دانلود جزوه &nbsp;
-                            <i class="material-icons">file_download</i>
-                        </button>
-                        <a class="btn btn-danger yekanFont normalFontSize pull-left" href="bookletList.html">
-                            بازگشت
-                            <i class="material-icons">arrow_back_ios</i>
-                        </a>
-                    </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="pull-right">
+                    <button class="btn btn-primary yekanFont normalFontSize" rel="tooltip" title
+                            data-original-title="حجم : 24 مگابایت">
+                        &nbsp; دانلود جزوه &nbsp;
+                        <i class="material-icons">file_download</i>
+                    </button>
+                </div>
+                <div class="pull-left">
+                    <a class="btn btn-danger normalFontSize pull-left yekanFont" href="bookletList.html" style="margin-left:15px">
+                        بازگشت
+                        <i class="material-icons">arrow_back_ios</i>
+                    </a>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
