cafe self page buttons and image slider fixed

--- a/cafe.html
+++ b/cafe.html
@@ -199,7 +199,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6">
 
-                    <div class="product-slider">
+                    <div class="product-slider" style="padding:0 !important;">
                         <div id="carousel" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="item active"><img src="assets/img/cafe1.jpg"></div>
@@ -447,17 +447,21 @@
                             خود وارد شده باشید. </p>
                         <!--</div>-->
                     </div>
+                </div>
+            </div>
 
-                    <div class="row text-right">
-                        <button class="btn btn-primary yekanFont normalFontSize">
-                            &nbsp; دریافت کد تخفیف &nbsp;
-                            <i class="material-icons">shopping_cart</i>
-                        </button>
-                        <a class="btn btn-danger yekanFont normalFontSize pull-left" href="cafeList.html">
-                            بازگشت
-                            <i class="material-icons">arrow_back_ios</i>
-                        </a>
-                    </div>
+            <div class="row">
+                <div class="pull-right" style="margin-right:10px">
+                    <button class="btn btn-primary yekanFont normalFontSize">
+                        دریافت کد تخفیف
+                        <i class="material-icons">shopping_cart</i>
+                    </button>
+                </div>
+                <div class="pull-left" style="margin-left:10px;">
+                    <a class="btn btn-danger yekanFont normalFontSize pull-left" href="cafeList.html">
+                        بازگشت
+                        <i class="material-icons">arrow_back_ios</i>
+                    </a>
                 </div>
             </div>
         </div>
